fix: enable post light/dark mode

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,10 +7,12 @@
   --yr-c-black-blur: rgba(36, 36, 36, .8);
   --yr-c-gray-light-1: hsl(0, 0%, 94%);
   --yr-c-gray-light-2: hsl(0, 0%, 90%);
-  --yr-c-gray-light-3: hsl(0, 0%, 70%);
+  --yr-c-gray-light-3: hsl(0, 0%, 80%);
+  --yr-c-gray-light-4: hsl(0, 0%, 70%);
   --yr-c-gray-dark-1: hsl(0, 0%, 12%);
   --yr-c-gray-dark-2: hsl(0, 0%, 16%);
-  --yr-c-gray-dark-3: hsl(0, 0%, 30%);
+  --yr-c-gray-dark-3: hsl(0, 0%, 24%);
+  --yr-c-gray-dark-4: hsl(0, 0%, 30%);
   --yr-c-blue: #4db9f3;
   --yr-c-blue-light: #6fc7f7;
   --yr-c-blue-dark: #3178cd;
@@ -30,6 +32,7 @@
   --yr-c-gray-1: var(--yr-c-gray-light-1);
   --yr-c-gray-2: var(--yr-c-gray-light-2);
   --yr-c-gray-3: var(--yr-c-gray-light-3);
+  --yr-c-gray-4: var(--yr-c-gray-light-4);
   --yr-c-divider: var(--yr-c-divider-light);
   --yr-c-text-1: var(--yr-c-text-light-1);
   --yr-c-text-2: var(--yr-c-text-light-2);
@@ -45,6 +48,7 @@
   --yr-c-gray-1: var(--yr-c-gray-dark-1);
   --yr-c-gray-2: var(--yr-c-gray-dark-2);
   --yr-c-gray-3: var(--yr-c-gray-dark-3);
+  --yr-c-gray-4: var(--yr-c-gray-dark-4);
   --yr-c-divider: var(--yr-c-divider-dark);
   --yr-c-text-1: var(--yr-c-text-dark-1);
   --yr-c-text-2: var(--yr-c-text-dark-2);
@@ -126,14 +130,15 @@ body {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #bbb;
+  background-color: var(--yr-c-gray-3);
+  
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #d9d9d9;
+  background-color: var(--yr-c-gray-4);
   border-radius: 9999px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #fff;
+  background-color: var(--yr-c-bg);
 }
